# raytracer

./: .gitignore  Readme.md  profile.pstat  profile.txt  pyproject.toml
ray_tracer/: example.py  example_simple.py  setup.py
ray_tracer/engine/: core.py  geometry.py  intersect.c  intersect.cp311-win_amd64.pyd  intersect.cp312-win_amd64.pyd  intersect.html  intersect.pyx  intersect_normal.py  light.py  utils.py
ray_tracer/tests/: test_geometry.py  test_light.py
